[AAE-39413] Refactor